--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <!-- during the first time loading the page, the body tag will call the initialize_Game() -->
-<body onload="initialize_Game()">
+<body onload=initialize_Game()>
 
     <div class="container">
 
