added css styling, picture, text color, alignment

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>Word Guess Game</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 <!-- during the first time loading the page, the body tag will call the initialize_Game() -->
-<body onload=initialize_Game()>
+<body class="backgroundimage" onload=initialize_Game()>
+
 
     <div class="container">
 
