--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Word Guess Game</title>
+    <title>Chinese Food Hangman</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -21,6 +21,8 @@
             <div class="col-md-12">
 
                 <div id="game-section">
+                    <h1>Chinese Food Hangman</h1>
+                    <br>
                     <p>Press any key to get started!</p>
                     <div>
                       <h3 class="section-title">Wins</h3>
